# coreb-retrieval-sota

./: .gitignore  EXPERIMENT_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
compat/deepspeed/: __init__.py
compat/deepspeed/utils/: __init__.py  zero_to_fp32.py
data/coreb/release_v2602/: code2code_qrels.jsonl  code2code_queries.jsonl  code2text_qrels.jsonl  code2text_queries.jsonl  code_corpus.jsonl  text2code_qrels.jsonl  text2code_queries.jsonl  text_corpus.jsonl
data/coreb/release_v2603/: code2code_qrels.jsonl  code2code_queries.jsonl  code2text_qrels.jsonl  code2text_queries.jsonl  code_corpus.jsonl  text2code_qrels.jsonl  text2code_queries.jsonl  text_corpus.jsonl
reports/: README.md  qwen3_release_v2602_code2code_dense_top10_task_alpha4_official.json  qwen3_release_v2602_code2code_dense_top32_task_alpha0_official.json  qwen3_release_v2602_code2code_dense_top32_task_alpha4_official.json
scripts/: export_coreb.py  fuse_runs.py  recompute_report_metrics.py  rerank_qwen3.py  run_bm25_baseline.py  run_dense_retrieval.py
src/coreb_sota/: __init__.py  data.py  lexical.py  metrics.py  qwen3.py  scoring.py
tests/: test_protocol.py
