[project]
name = "coreb-retrieval-sota"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.14.0",
  "numpy>=1.24.0",
  "tqdm>=4.60.0",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.0.0",
  "transformers>=4.50.0",
  "bitsandbytes>=0.43.0",
]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
